MySql Database use

--- a/Saturn.Core.ConsoleApp.Student/Saturn.Core.ConsoleApp.Student.csproj
+++ b/Saturn.Core.ConsoleApp.Student/Saturn.Core.ConsoleApp.Student.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Saturn.Core.Logic\Saturn.Core.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
