--- a/Saturn.Core.Logic/Saturn.Core.Logic.csproj
+++ b/Saturn.Core.Logic/Saturn.Core.Logic.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Saturn.Core.DataAccess\Saturn.Core.DataAccess.csproj" />
     <ProjectReference Include="..\Saturn.Core.Entity\Saturn.Core.Entity.csproj" />
   </ItemGroup>
