--- a/Saturn.Core.Web/appsettings.json
+++ b/Saturn.Core.Web/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "SecretKey": "YourSuperSecretKey",
+    "Issuer": "yourdomain.com",
+    "Audience": "yourdomain.com"
+  },
   "AllowedHosts": "*"
 }
