--- a/Saturn.Core.Desktop.Teacher/Saturn.Core.Desktop.Teacher.csproj
+++ b/Saturn.Core.Desktop.Teacher/Saturn.Core.Desktop.Teacher.csproj
@@ -9,15 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <ProjectReference Include="..\Saturn.Core.Logic\Saturn.Core.Logic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Saturn.Core.Logic\Saturn.Core.Logic.csproj" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
