--- a/Saturn.Core.ConsoleApp.Student/Saturn.Core.ConsoleApp.Student.csproj
+++ b/Saturn.Core.ConsoleApp.Student/Saturn.Core.ConsoleApp.Student.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
