--- a/Saturn.Core.Desktop.Teacher/Saturn.Core.Desktop.Teacher.csproj
+++ b/Saturn.Core.Desktop.Teacher/Saturn.Core.Desktop.Teacher.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
 
 </Project>
