--- a/Saturn.Core.Web/appsettings.json
+++ b/Saturn.Core.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SaturnDb":"Server = localhost;user ID= silivribilsem_com_saturn; Password =X2kkPrV10kwqfs#e7;Database=silivribilsem_com_saturndb;"
+    "SaturnDb":"Server = 192.168.0.1;user ID= saturn; Password =Saturn123.;Database=saturndb;"
   },
   "AllowedHosts": "*"
 }
