--- a/Saturn.Core.Web/appsettings.json
+++ b/Saturn.Core.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SaturnDb":"Server = 192.168.1.150;user ID= saturn; Password =Saturn123.;Database=saturndb;"
+    "SaturnDb":"Server = localhost;user ID= osman; Password =Server2025.;Database=saturndb;"
   },
   "AllowedHosts": "*"
 }
